--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>CoRE | Computers, Robotics, and Engineering</title>
 		<!-- Compiled and minified JavaScript -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet"> 
-		<link rel="stylesheet" href="/css/main.css">
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<nav class="nav">
