Fixes to card and about-photos

--- a/public/index.html
+++ b/public/index.html
@@ -166,9 +166,9 @@
 		-->
 				</div>
 				<div class="about__images">
-					<img class="about__photo about__photo--1" src="../img/about-1.jpg" alt="A game of volleyball.">
-					<img class="about__photo about__photo--2" src="../img/about-2.jpg" alt="A Python workshop.">
-					<img class="about__photo about__photo--3" src="../img/about-3.jpg" alt="A project demo tabling.">
+					<img class="about__photo about__photo--1" src="img/about-1.jpg" alt="A game of volleyball.">
+					<img class="about__photo about__photo--2" src="img/about-2.jpg" alt="A Python workshop.">
+					<img class="about__photo about__photo--3" src="img/about-3.jpg" alt="A project demo tabling.">
 				</div>
 			
 			</div>
