--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<title>CoRE | Computers, Robotics, and Engineering</title>
 		<!-- Compiled and minified JavaScript -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet"> 
