Fixed contact image paths

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 				</div>
 				<div class="contacts__items">
 					<div class="contacts__item">
-						<img src="../img/contact-sam.jpeg" alt="Sam Kustin" class="contacts__img contacts__img--dash">
+						<img src="img/contact-sam.jpeg" alt="Sam Kustin" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
 							<h2 class="heading2">Sam Kustin</h2>
 							<h3 class="heading3">President</h3>
@@ -47,7 +47,7 @@
 						</div>
 					</div>
 					<div class="contacts__item">
-						<img src="../img/contact-michelle.jpg" alt="Michelle Tan" class="contacts__img contacts__img--dash">
+						<img src="img/contact-michelle.jpg" alt="Michelle Tan" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
 							<h2 class="heading2">Michelle Tan</h2>
 							<h3 class="heading3">Vice President</h3>
@@ -58,7 +58,7 @@
 						</div>
 					</div>
 					<div class="contacts__item">
-						<img src="../img/contact-henry.jpg" alt="Henry Burns" class="contacts__img contacts__img--dash">
+						<img src="img/contact-henry.jpg" alt="Henry Burns" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
 							<h2 class="heading2">Henry Burns</h2>
 							<h3 class="heading3">Treasurer</h3>
@@ -69,7 +69,7 @@
 						</div>
 					</div>
 					<div class="contacts__item">
-						<img src="../img/contact-mary.jpg" alt="Mary Mahoney" class="contacts__img contacts__img--dash">
+						<img src="img/contact-mary.jpg" alt="Mary Mahoney" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
 							<h2 class="heading2">Mary Mahoney</h2>
 							<h3 class="heading3">Secretary</h3>
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 					<div class="contacts__item">
-						<img src="../img/contact-yu.jpeg" alt="Yu Xuan Wu" class="contacts__img contacts__img--dash">
+						<img src="img/contact-yu.jpeg" alt="Yu Xuan Wu" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
 							<h2 class="heading2">Yu Xuan Wu</h2>
 							<h3 class="heading3">Systems Administrator</h3>
@@ -90,7 +90,7 @@
 						</div>
 					</div>
 					<div class="contacts__item">
-						<img src="../img/contact-nick.jpg" alt="Nicholas Stecyna" class="contacts__img contacts__img--dash">
+						<img src="img/contact-nick.jpg" alt="Nicholas Stecyna" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
 							<h2 class="heading2">Nicholas Stecyna</h2>
 							<h3 class="heading3">CoREtex Manager</h3>
@@ -100,7 +100,7 @@
 						</div>
 					</div>
 					<div class="contacts__item">
-						<img src="../img/contact-nicole.jpeg" alt="Nicole Ruiz Torres" class="contacts__img contacts__img--dash">
+						<img src="img/contact-nicole.jpeg" alt="Nicole Ruiz Torres" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
 							<h2 class="heading2">Nicole Ruiz Torres</h2>
 							<h3 class="heading3">Freshman Representative</h3>
@@ -189,7 +189,7 @@
 				<div class="card__layer1-drop-shadow card__layer1-drop-shadow--right"></div>
 				<div class="card__layer2 card__layer2--right"></div>	
 			</div>
-			<h3 class="heading4">CoRE was founded in 1991, making us the oldest living-learning community in BU!</h3>
+			<h3 class="heading4">CoRE was founded in 1991, making us the oldest living-learning community in BU</h3>
 			<div class="card">
 				<div class="card__background card__background--1"></div>
 				<div class="card__text card__text--left">
@@ -201,13 +201,13 @@
 				<div class="card__layer1-drop-shadow card__layer1-drop-shadow--left"></div>
 				<div class="card__layer2 card__layer2--left"></div>	
 			</div>
-			<h3 class="heading4">CoRE was responsible for bringing internet to the Dickinson Community...</h3>
+			<h3 class="heading4">CoRE was responsible for bringing internet to the Dickinson Community</h3>
 			<div class="card">
 				<div class="card__background card__background--3"></div>
 				<div class="card__text card__text--right">
 					<h3 class="heading3">CoreBQ</h2>
 					<h4 class="heading4 u-color-gray">May 5th</h4>
-					<p class="paragraph"> </p>
+					<p class="paragraph"></p>
 				</div>
 				<div class="card__layer1 card__layer1--right"></div>
 				<div class="card__layer1-drop-shadow card__layer1-drop-shadow--right"></div>
