--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<span class="modal__close">&larr;</span>
 				</div>
 				<div class="dead__contents">
-					<img src="../img/corebot.svg" class="dead__corevo" alt="CoREVO">
+					<img src="img/corebot.svg" class="dead__corevo" alt="CoREVO">
 					<div class="dead__text">
 						<h2 class="heading2">Oopsie!</h2>
 						<h3 class="heading3">
@@ -141,6 +141,7 @@
 					<br/>
 					<h4 class="heading4">Binghamton University's own technology focused <br/>living-learning community.</h4>
 				</div>
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLScr1rTF9wp9-j8EjUkAzefnAF8hsoaL02Rh25fzOuPl4mp7Qg/viewform?c=0&w=1" class="cta u-margin-top-md u-mobile-only">Apply for 2019-2020</a>
 			</div>
 		</header>
 
@@ -203,7 +204,7 @@
 				<div class="card__text card__text--right">
 					<h3 class="heading3">CoreBQ</h2>
 					<h4 class="heading4 u-color-gray">May 5th</h4>
-					<p class="paragraph"></p>
+					<p class="paragraph">Picnic time! </p>
 				</div>
 				<div class="card__layer1 card__layer1--right"></div>
 				<div class="card__layer1-drop-shadow card__layer1-drop-shadow--right"></div>
@@ -253,7 +254,7 @@
 				<div class="final-cta__cta">
 					<h2 class="heading2">What our residents have to say...</h2>
 					<p class="paragraph u-margin-bottom-md">We asked our residents what they thought about CoRE, totally adlibbed.</p>
-					<button class="cta">Apply for 2019-2020</button>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLScr1rTF9wp9-j8EjUkAzefnAF8hsoaL02Rh25fzOuPl4mp7Qg/viewform?c=0&w=1" class="cta">Apply for 2019-2020</a>
 				</div>
 				<div class="final-cta__video-container">
 					<iframe id="video" src="https://www.youtube-nocookie.com/embed/M31iebeWFuY?showinfo=0&rel=0&theme=light&disablekb=1" frameborder="0"></iframe>
