--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<a href="javascript:void(0)" class="nav__link" onclick="turnOnModal(event, 'dead')">photo gallery</a>
 			<a href="javascript:void(0)" class="nav__link" onclick="turnOnModal(event, 'dead')">project diaries</a>
 			<a href="javascript:void(0)" class="nav__link" onclick="turnOnModal(event, 'contacts')">contact us</a>
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLScr1rTF9wp9-j8EjUkAzefnAF8hsoaL02Rh25fzOuPl4mp7Qg/viewform?c=0&w=1" class="nav__link nav__link--button">apply now</a>
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSemJTC4vyiGbEU-lX4Mya9oPNvKMPWTFeO7yVNSuHATR3zQBA/viewform?usp=pp_url" class="nav__link nav__link--button">apply now</a>
 			<!-- Hamburger Menu -->
 			<!--
 			<a href="javascript:void(0);" class="mobile-nav" onclick="mobileNavToggle()">
@@ -31,7 +31,7 @@
 		<div class="modal" id="contacts-modal">
 			<div class="contacts">
 				<div class="modal__top-row">
-					<h1 class="heading1 u-color-primary">contacts</h1>
+					<h1 class="heading1 u-color-primary u-reset-letter-spacing">contacts</h1>
 					<span class="modal__close">&larr;</span>
 				</div>
 				<div class="contacts__items">
@@ -112,7 +112,7 @@
 		<div class="modal" id="dead-modal">
 			<div class="dead">
 				<div class="modal__top-row">
-					<h1 class="heading1 u-color-primary">woopsie!</h1>
+					<h1 class="heading1 u-color-primary u-reset-letter-spacing">woopsie!</h1>
 					<span class="modal__close">&larr;</span>
 				</div>
 				<div class="dead__contents">
@@ -152,7 +152,7 @@
 				<div class="about__texts">
 					<h4 class="heading4 u-color-primary-dark">...a diverse community of motivated individuals.</h4>
 					<p class="paragraph">
-						CoRE is a special interest housing community with a collection of students that share common interests in <span class="u-color-primary-dark">Co</span>mputers, <span class="u-color-primary-dark">R</span>obotics, and <span class="u-color-primary-dark">E</span>ngineering. Together, we create an awesome and diverse student body with majors ranging from English and Geology to Computer Science and Mechanical Engineering.
+						CoRE is a special interest housing community with a collection of students that share common interests in <span class="u-color-primary-dark">Co</span>mputers, <span class="u-color-primary-dark">R</span>obotics, and <span class="u-color-primary-dark">E</span>ngineering. Together, we create an awesome and diverse student body with majors ranging from Business and Biology to Computer Science and Mechanical Engineering.
 					</p>
 					<br/>
 					<h4 class="heading4 u-color-primary-dark">...really friendly!</h4>
@@ -204,7 +204,7 @@
 				<div class="card__text card__text--right">
 					<h3 class="heading3">CoreBQ</h2>
 					<h4 class="heading4 u-color-gray">May 5th</h4>
-					<p class="paragraph">Picnic time! </p>
+					<p class="paragraph">Picnic time! CoreBQ is an event hosted towards the end of Spring semester, and alumni and friends are invited back for a barbeque at Stair Park. Here, we enjoy the nice weather, good food, and even better company before the year ends.</p>
 				</div>
 				<div class="card__layer1 card__layer1--right"></div>
 				<div class="card__layer1-drop-shadow card__layer1-drop-shadow--right"></div>
@@ -219,7 +219,7 @@
 					<div class="card-sm__text">
 						<h4 class="heading4">Escape the Room</h4>
 						<h4 class="heading4 u-color-gray-dark">October</h4>
-						<p class="paragraph">The gang builds an Escape the Room. It goes horribly wrong.</p>
+						<p class="paragraph">The gang plays Riddler, constructing series of puzzles for the student community.</p>
 					</div>
 				</div>
 				<div class="card-sm">
@@ -266,7 +266,7 @@
 			</div>
 		</section>
 		</main>
-
+		
 		<footer class="footer">
 			<div class="footer__logo-box">
 				<img class="footer__logo" src="img/Logo_Simple_Orig.svg" alt="CoRE Logo" >
@@ -276,7 +276,7 @@
 					<a href="javascript:void(0)" class="footer__link" onclick="turnOnModal(event, 'dead')">gallery</a>
 					<a href="javascript:void(0)" class="footer__link" onclick="turnOnModal(event, 'dead')">diaries</a>
 					<a href="javascript:void(0)" class="footer__link" onclick="turnOnModal(event, 'contacts')">contact</a>
-					<a href="https://docs.google.com/forms/d/e/1FAIpQLScr1rTF9wp9-j8EjUkAzefnAF8hsoaL02Rh25fzOuPl4mp7Qg/viewform?c=0&w=1" class="footer__link">apply</a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSemJTC4vyiGbEU-lX4Mya9oPNvKMPWTFeO7yVNSuHATR3zQBA/viewform?usp=pp_url" class="footer__link">apply</a>
 				</ul>
 				<p class="footer__copyright">
 					Built by <span class="footer__copyright-link">yu xuan wu</span>. <br\>Copyright © by <span class="footer__copyright-link">yu xuan wu</span>.
