--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 			<a href="javascript:void(0)" class="nav__link" onclick="turnOnModal(event, 'dead')">photo gallery</a>
 			<a href="javascript:void(0)" class="nav__link" onclick="turnOnModal(event, 'dead')">project diaries</a>
 			<a href="javascript:void(0)" class="nav__link" onclick="turnOnModal(event, 'contacts')">contact us</a>
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLSemJTC4vyiGbEU-lX4Mya9oPNvKMPWTFeO7yVNSuHATR3zQBA/viewform?usp=pp_url" class="nav__link nav__link--button">apply now</a>
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSemJTC4vyiGbEU-lX4Mya9oPNvKMPWTFeO7yVNSuHATR3zQBA/viewform?usp=sf_link
+" class="nav__link nav__link--button">apply now</a>
 			<!-- Hamburger Menu -->
 			<!--
 			<a href="javascript:void(0);" class="mobile-nav" onclick="mobileNavToggle()">
@@ -141,7 +142,8 @@
 					<br/>
 					<h4 class="heading4">Binghamton University's own technology focused <br/>living-learning community.</h4>
 				</div>
-				<a href="https://docs.google.com/forms/d/e/1FAIpQLScr1rTF9wp9-j8EjUkAzefnAF8hsoaL02Rh25fzOuPl4mp7Qg/viewform?c=0&w=1" class="cta u-margin-top-md u-mobile-only">Apply for 2019-2020</a>
+				         
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLSemJTC4vyiGbEU-lX4Mya9oPNvKMPWTFeO7yVNSuHATR3zQBA/viewform?usp=sf_link" class="cta u-margin-top-md u-mobile-only">Apply for 2019-2020</a>
 			</div>
 		</header>
 
@@ -254,7 +256,7 @@
 				<div class="final-cta__cta">
 					<h2 class="heading2">What our residents have to say...</h2>
 					<p class="paragraph u-margin-bottom-md">We asked our residents what they thought about CoRE, totally adlibbed.</p>
-					<a href="https://docs.google.com/forms/d/e/1FAIpQLScr1rTF9wp9-j8EjUkAzefnAF8hsoaL02Rh25fzOuPl4mp7Qg/viewform?c=0&w=1" class="cta">Apply for 2019-2020</a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSemJTC4vyiGbEU-lX4Mya9oPNvKMPWTFeO7yVNSuHATR3zQBA/viewform?usp=sf_link" class="cta">Apply for 2019-2020</a>
 				</div>
 				<div class="final-cta__video-container">
 					<iframe id="video" src="https://www.youtube-nocookie.com/embed/M31iebeWFuY?showinfo=0&rel=0&theme=light&disablekb=1" frameborder="0"></iframe>
@@ -276,7 +278,7 @@
 					<a href="javascript:void(0)" class="footer__link" onclick="turnOnModal(event, 'dead')">gallery</a>
 					<a href="javascript:void(0)" class="footer__link" onclick="turnOnModal(event, 'dead')">diaries</a>
 					<a href="javascript:void(0)" class="footer__link" onclick="turnOnModal(event, 'contacts')">contact</a>
-					<a href="https://docs.google.com/forms/d/e/1FAIpQLSemJTC4vyiGbEU-lX4Mya9oPNvKMPWTFeO7yVNSuHATR3zQBA/viewform?usp=pp_url" class="footer__link">apply</a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSemJTC4vyiGbEU-lX4Mya9oPNvKMPWTFeO7yVNSuHATR3zQBA/viewform?usp=sf_link" class="footer__link">apply</a>
 				</ul>
 				<p class="footer__copyright">
 					Built by <span class="footer__copyright-link">yu xuan wu</span>. <br\>Copyright © by <span class="footer__copyright-link">yu xuan wu</span>.
