--- a/index.html
+++ b/index.html
@@ -37,72 +37,74 @@
 				</div>
 				<div class="contacts__items">
 					<div class="contacts__item">
-						<img src="img/contact-sam.jpeg" alt="Sam Kustin" class="contacts__img contacts__img--dash">
-						<div class="contacts__info">
-							<h2 class="heading2">Sam Kustin</h2>
-							<h3 class="heading3">President</h3>
-							<div class="contacts__links">
-								<a href="mailto:skustin1@binghamton.edu" class="contacts__link">skustin1@binghamton.edu</a>
-							</div>
-						</div>
-					</div>
-					<div class="contacts__item">
 						<img src="img/contact-michelle.jpg" alt="Michelle Tan" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
 							<h2 class="heading2">Michelle Tan</h2>
-							<h3 class="heading3">Vice President</h3>
+							<h3 class="heading3">President</h3>
 							<div class="contacts__links">
 								<a href="mailto:mtan23@binghamton.edu" class="contacts__link">mtan23@binghamton.edu</a>
 							</div>
 						</div>
 					</div>
 					<div class="contacts__item">
-						<img src="img/contact-henry.jpg" alt="Henry Burns" class="contacts__img contacts__img--dash">
+						<img src="img/contact-alex.jpg" alt="Alex Burke" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
-							<h2 class="heading2">Henry Burns</h2>
-							<h3 class="heading3">Treasurer</h3>
+							<h2 class="heading2">Alex Burke</h2>
+							<h3 class="heading3">Vice President</h3>
 							<div class="contacts__links">
-								<a href="mailto:hburns3@binghamton.edu" class="contacts__link">hburns3@binghamton.edu</a>
+								<a href="mailto:aburke5@binghamton.edu" class="contacts__link">aburke5@binghamton.edu</a>
 							</div>
 						</div>
 					</div>
 					<div class="contacts__item">
-						<img src="img/contact-mary.jpg" alt="Mary Mahoney" class="contacts__img contacts__img--dash">
+						<img src="img/contact-jordan.jpg" alt="Jordan Levin" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
-							<h2 class="heading2">Mary Mahoney</h2>
+							<h2 class="heading2">Jordan Levin</h2>
 							<h3 class="heading3">Secretary</h3>
 							<div class="contacts__links">
-								<a href="mailto:mmahon10@binghamton.edu" class="contacts__link">mmahon10@binghamton.edu</a>
+								<a href="jlevin38@binghamton.edu" class="contacts__link">jlevin38@binghamton.edu</a>
 							</div>
 						</div>
 					</div>
+					
 					<div class="contacts__item">
-						<img src="img/contact-yu.jpeg" alt="Yu Xuan Wu" class="contacts__img contacts__img--dash">
+						<img src="img/contact-ajahni.jpg" alt="Ajahni Lee" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
-							<h2 class="heading2">Yu Xuan Wu</h2>
+							<h2 class="heading2">Ajahni Lee</h2>
+							<h3 class="heading3">Treasurer</h3>
+							<div class="contacts__links">
+								<a href="alee884@binghamton.edu" class="contacts__link">alee884@binghamton.edu</a>
+							</div>
+						</div>
+					</div>
+					
+					<div class="contacts__item">
+						<img src="img/contact-jenny.jpeg" alt="Jenny Thakkar" class="contacts__img contacts__img--dash">
+						<div class="contacts__info">
+							<h2 class="heading2">Jenny Thakkar</h2>
 							<h3 class="heading3">Systems Administrator</h3>
 							<div class="contacts__links">
-								<a href="mailto:ywu148@binghamton.edu" class="contacts__link">ywu148@binghamton.edu</a>
+								<a href="mailto:jthakka1@binghamton.edu" class="contacts__link">jthakka1@binghamton.edu</a>
 							</div>
 						</div>
 					</div>
 					<div class="contacts__item">
-						<img src="img/contact-nick.jpg" alt="Nicholas Stecyna" class="contacts__img contacts__img--dash">
+						<img src="img/contact-lance.jpg" alt="Lance Cheng" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
-							<h2 class="heading2">Nicholas Stecyna</h2>
+							<h2 class="heading2">Lance Cheng</h2>
 							<h3 class="heading3">CoREtex Manager</h3>
 							<div class="contacts__links">
-								<a href="mailto:nstecyn1@binghamton.edu" class="contacts__link">nstecyn1@binghamton.edu</a>
+								<a href="mailto:lcheng15@binghamton.edu" class="contacts__link">lcheng15@binghamton.edu</a>
 							</div>
 						</div>
 					</div>
 					<div class="contacts__item">
-						<img src="img/contact-nicole.jpeg" alt="Nicole Ruiz Torres" class="contacts__img contacts__img--dash">
+						<img src="img/contact-joe.jpeg" alt="Joseph Babbitt" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
-							<h2 class="heading2">Nicole Ruiz Torres</h2>
+							<h2 class="heading2">Joeseph Babbit</h2>
 							<h3 class="heading3">Freshman Representative</h3>
 							<div class="contacts__links">
-								<a href="mailto:nruizto1@binghamton.edu" class="contacts__link">nruizto1@binghamton.edu</a>
+								<a href="mailto:jbabbit1@binghamton.edu" class="contacts__link">jbabbit1@binghamton.edu</a>
 							</div>
 						</div>
 					</div>
