--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					</div>
 					
 					<div class="contacts__item">
-						<img src="img/contact-jenny.jpeg" alt="Jenny Thakkar" class="contacts__img contacts__img--dash">
+						<img src="img/contact-jenny.jpg" alt="Jenny Thakkar" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
 							<h2 class="heading2">Jenny Thakkar</h2>
 							<h3 class="heading3">Systems Administrator</h3>
@@ -99,7 +99,7 @@
 						</div>
 					</div>
 					<div class="contacts__item">
-						<img src="img/contact-joe.jpeg" alt="Joseph Babbitt" class="contacts__img contacts__img--dash">
+						<img src="img/contact-joe.jpg" alt="Joseph Babbitt" class="contacts__img contacts__img--dash">
 						<div class="contacts__info">
 							<h2 class="heading2">Joeseph Babbit</h2>
 							<h3 class="heading3">Freshman Representative</h3>
